Created nav bar and search section

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 	<link rel="stylesheet" href="index.css" />
 	<ul>
 		<li>Ace</li>
-		<li><a href=http://www.gmail.com>mail</a>  </li>
-		<li><a href=https://www.google.com/imghp>image</a> </li> 
-		<li><img src="" alt = "nin dots"> </li>
+		<li><a href=http://www.gmail.com>Mail</a>  </li>
+		<li><a href=https://www.google.com/imghp>Image </a></li> 
+		<li><a href=https://www.google.com/imghp><img src="https://raw.githubusercontent.com/cedricgc/playground/master/The%20Odin%20Project/google-homepage/images/apps.png" alt = "nin dots"> </a></li>
+		<li><a href=https://www.google.com/imghp><img src="https://raw.githubusercontent.com/cedricgc/playground/master/The%20Odin%20Project/google-homepage/images/notification.png" alt = "notifacation"> </a></li>
+		<li ><a href=https://www.google.com/imghp><img class="img-circle" src="http://lh3.googleusercontent.com/-4VMjvOxXC0A/AAAAAAAAAAI/AAAAAAAAAAA/3t7BX598dZ4/s32-c-mo/photo.jpg" alt = "User Pic"> </a></li>
+
+		
 	</ul>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
 </head>
 
 <body>
@@ -14,13 +28,16 @@
 	<!-- modify attributes for each color-->
 	<img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"> 
 	</div>
-	<div> 
-		<form action="search">
+	<br>
+	<div > 
+		<form action="search" class="center">
 				
 			<input type="text" name="search"><br>
 
-			<input type="submit" value="Google Search:">
-			<input type="submit" value="I'm feeling lucky:">
+			<div id="buttons">
+			<input type="submit" value="Google Search">
+			<input type="submit" value="I'm Feeling Lucky">
+			</div>
 
 	</div>
 
