Need to work on footer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head> 
 	<link rel="stylesheet" href="index.css" />
-	<ul>
+	<ul class="listRight">
 		<li>Ace</li>
 		<li><a href=http://www.gmail.com>Mail</a>  </li>
 		<li><a href=https://www.google.com/imghp>Image </a></li> 
@@ -43,3 +43,21 @@
 
 </body>
 
+<br>
+
+<footer>
+	<div id="footer">
+			<ul id="footerLeft">
+		  		<li><a href=http://www.gmail.com>Advertising</a>  </li>
+		  		<li><a href=http://www.gmail.com>Business</a>  </li>
+		  		<li><a href=http://www.gmail.com>About</a>  </li>
+		  	</ul>
+
+		  	<ul class="listRight">
+		  		<li><a href=http://www.gmail.com>Privacy</a>  </li>
+		  		<li><a href=http://www.gmail.com>Terms</a>  </li>
+		  		<li><a href=http://www.gmail.com>Settings</a>  </li>
+		  	</ul>
+	</div>
+
+</footer>
