--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 			<input type="submit" value="Google Search">
 			<input type="submit" value="I'm Feeling Lucky">
 			</div>
-
 	</div>
+
+
+	<p> <a href=https://get.google.com/tips/#!?utm_source=en-hpp&utm_medium=hpp&utm_campaign=gsa1&category=ask-google>15 tips</a> for making the most of Google on your phone. </p>
 
 </body>
 
