--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		  		<li><a href=http://www.gmail.com>About</a>  </li>
 		  	</ul>
 
-		  	<ul class="listRight">
+		  	<ul id="footerRight" class="listRight">
 		  		<li><a href=http://www.gmail.com>Privacy</a>  </li>
 		  		<li><a href=http://www.gmail.com>Terms</a>  </li>
 		  		<li><a href=http://www.gmail.com>Settings</a>  </li>
